--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -23,5 +23,7 @@ jobs:
 
       - name: Run the bot
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
+
         run: python botcrime.py
