--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -21,9 +21,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Initialize SQLite database
+        run: python database_pg.py
+
       - name: Run the bot
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
-
         run: python botcrime.py
