--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -19,7 +19,9 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
       - name: Initialize SQLite database
         run: python database_pg.py
